--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AsteroidsInCompose</string>
     <string name="favourite_label">Mark as Favourite</string>
     <string name="share_label">Share with Others</string>
+    <string name="no_fav_photos">No Saved Photos</string>
 </resources>
