--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="favourite_label">Mark as Favourite</string>
     <string name="share_label">Share with Others</string>
     <string name="no_fav_photos">No Saved Photos</string>
+    <string name="all_photos">All Photos</string>
 </resources>
