--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="share_label">Share with Others</string>
     <string name="no_fav_photos">No Saved Photos</string>
     <string name="all_photos">All Photos</string>
+    <string name="fav_header">Favorite Photos</string>
 </resources>
