Add toAstroPhotoEntity mapper function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="all_photos">All Photos</string>
     <string name="fav_header">Favorite Photos</string>
     <string name="delete_photo">Remove From Favorite</string>
+    <string name="unexpected_error">Unexpected error occurred</string>
+    <string name="could_not_load_data">Could not load data, check your internet connection</string>
 </resources>
