Add Navigation Arrow to FavoritePhotosScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="share_label">Share with Others</string>
     <string name="no_fav_photos">No Saved Photos</string>
     <string name="all_photos">All Photos</string>
+    <string name="back_label">Back</string>
+
     <string name="fav_header">Favorite Photos</string>
     <string name="delete_photo">Remove From Favorite</string>
     <string name="unexpected_error">Unexpected error occurred</string>
