--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">AsteroidsInCompose</string>
     <string name="favourite_label">Mark as Favourite</string>
     <string name="share_label">Share with Others</string>
-    <string name="no_fav_photos">No Saved Photos</string>
+    <string name="no_fav_photos">No Photos Found</string>
     <string name="all_photos">All Photos</string>
     <string name="back_label">Back</string>
     <string name="photo_details">Astro Photo Details</string>
+    <string name="loading_photo">Loading ...</string>
 
     <string name="fav_header">Favorite Photos</string>
     <string name="delete_photo">Remove From Favorite</string>
