--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,13 @@
     <string name="loading_photo">Loading …</string>
     <string name="photo_deleted">Photograph Deleted</string>
     <string name="undo_delete">Undo</string>
+    <string name="welcome_message">Welcome to Astro Photos</string>
 
     <string name="fav_header">Favorite Photos</string>
     <string name="delete_photo">Remove From Favorite</string>
     <string name="unexpected_error">Unexpected error occurred</string>
     <string name="could_not_load_data">Could not load data, check your internet connection</string>
-    <string name="welcome_header">Swipe to refresh \nLike to save Favs for Later \nHit Remove to Dislike \nHit &amp;#128072 to remove photo from Favs</string>
+    <string name="welcome_header">Swipe to refresh \nHit &#128149; to save Favs for Later \nHit &#128465; to remove from Favs \nHit &#127757; to remove photo from Favs</string>
 
     <string name="photo_caption">Presenting: %s. Space lovers &#127757; can download Astro Photos Android App
         for more space photos</string>
